<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>foxglove_msgs</name>
  <version>1.1.0</version>
  <description>
    foxglove_msgs extends the common ROS visualization messages with additional
    useful messages that are supported by Foxglove Studio.
  </description>
  <maintainer email="john@foxglove.dev">John Hurliman</maintainer>
  <license>MIT</license>

  <url>https://foxglove.dev/</url>
  <author email="john@foxglove.dev">John Hurliman</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <build_depend condition="$ROS_VERSION == 1">message_generation</build_depend>
  <build_depend condition="$ROS_VERSION == 2">rosidl_default_generators</build_depend>
  <build_depend>ros_environment</build_depend>

  <depend>visualization_msgs</depend>

  <exec_depend condition="$ROS_VERSION == 1">message_runtime</exec_depend>
  <exec_depend condition="$ROS_VERSION == 2">rosidl_default_runtime</exec_depend>

  <test_depend condition="$ROS_VERSION == 2">ament_lint_auto</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type condition="$ROS_VERSION == 1">catkin</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
